<resources>
    <string name="app_name">두리번</string>

    <string name="home_app_bar_description_text">지금 여행 중이에요! ✈️</string>
    <string name="participate_text">여행 참여코드를 입력해주세요!</string>
    <string name="all_put">모두 입력해주세요</string>
    <string name="participate_check">참여하는 \n여행 정보가 맞나요?</string>
    <string name="participate_btn_again">다시 할게요!</string>
    <string name="participate_btn_yes">맞아요!</string>
    <string name="participate_check_where">떠나요 두리번 to 제주</string>
    <string name="done_join">참여 완료!</string>
    <string name="schedule_add">일정을 추가하세요</string>
    <string name="schedule_what">어떤 일정인가요?</string>
    <string name="schedule_time">시간 추가하기</string>
    <string name="schedule_location">위치 추가하기</string>
    <string name="schedule_memo">메모하기</string>
    <string name="schedule_memo_condition">| 25자 이하로 작성해주세요</string>
    <string name="schedule_what_hint">Ex. 인천공항 이동하기</string>
    <string name="schedule_time_hint1">2021.01.01(일)</string>
    <string name="schedule_time_hint2">오후 12:00</string>
    <string name="schedule_location_hint">Ex. 인천광역시 중구</string>
    <string name="schedule_memo_hint">Ex. 여권 챙기기</string>
    <string name="schedule_notadd">추가 안함</string>
    <string name="schedule_add_btn">새로운 일정 추가</string>
    <string name="schedule_edit">일정을 편집하세요</string>
    <string name="schedule_edit_what">인천공항 이동하기</string>
    <string name="schedule_edit_location">인천광역시 중구</string>
    <string name="schedule_edit_memo">준비물 챙기기</string>
    <string name="schedule_edit_btn">일정 편집하기</string>
    <string name="schedule_edit_date">2021.07.29(목)</string>
    <string name="loading_title">여행을 떠나볼까요?</string>
    <string name="loading_description1">여행을 생성하거나 참여 코드를 입력하여</string>
    <string name="loading_description2">새로운 여행을 시작하세요</string>
    <string name="loading_skip">skip</string>
    <string name="loading_next">Next</string>
    <string name="loading_start">Start</string>

    <string name="start_new_travel">번들님의 새로운 여행\n같이 시작해요!</string>
    <string name="write_travel_name">여행 이름을 지어주세요.</string>
    <string name="travel_place">어디로 여행 가세요?</string>
    <string name="register_travel_date">여행 일정 등록해주세요</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">끝나는 날짜</string>
    <string name="travel_people">누구와 함께하는 여행인가요?</string>
    <string name="travel_people_example">예) 가족 / 친구 / 연인</string>
    <string name="add_date">+ 날짜 추가하기</string>
    <string name="build_new_travel">새로운 여행 시작하기</string>
    <string name="next_travel_date">번들님 여행 날짜는\n언제인가요?</string>
    <string name="over_the_water">Ex. 물넘어 제주 속 두리번</string>
    <string name="jeju_seogwipo">Ex. 제주도 서귀포시</string>
    <string name="please_enter_date">해당 날짜를 눌러 일정을 선택해주세요</string>
    <string name="click_pic">대표 사진을 선택해주세요</string>
    <string name="we_prepared">여행의 대표사진으로 활용될 사진을 두리번이 준비했어요!</string>
    <string name="do_it_later">나중에 할게요</string>
    <string name="copy_codes">참여코드 복사</string>
    <string name="start_new_travel_with_plane">새로운 여행 시작✈️</string>
    <string name="prepare_new_travel">아래 여행 참여 코드를 공유하여\n함께 여행을 준비해나가세요!️</string>
    <string name="done_copy">복사 완료!</string>
    <string name="moving_to_home">새로운 여행 그룹으로 이동 중</string>
    <string name="no_schedule_please_add">아직 이 날의 일정이 없어요!\n첫 일정을 등록해주세요</string>
    <string name="add_schedule">+ 일정 추가하기</string>
    <string name="time">시간</string>
    <string name="place">장소</string>
    <string name="memo">메모</string>
    <string name="delete">삭제하기</string>
    <string name="edit">편집하기</string>
    <string name="really_delete_question">정말 삭제하시겠습니까?</string>
    <string name="i_wont">안할게요</string>
    <string name="will_delete">삭제할게요</string>
    <string name="with_people">함께하는 사람</string>
    <string name="copy_code">참여코드 복사하기</string>
    <string name="travel_goal">여행 목표</string>
    <string name="must_know">꼭 알아줘</string>
    <string name="role_alloc">역할 분담</string>
    <string name="checklist">체크리스트</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="our_goal">우리의 여행 목표</string>
    <string name="plus_add">+ 추가하기</string>
    <string name="share_goals">여행 목표를 공유하세요!</string>
    <string name="goal_detail">이번 여행에서 어떤 것을\n얻고 싶은지 작성해보세요</string>
    <string name="please_know_this">이것만은 꼭 알아줘!</string>
    <string name="share_first">꼭 알려야 할 것들을 미리 공유하세요!</string>
    <string name="share_first_detail">서로 미리 알면 좋을 습관이나\n생활 패턴 등을 함께 이야기해보세요</string>
    <string name="set_role_first">여행 멤버들의 역할을 정하세요!</string>
    <string name="set_role_first_detail">예약 담당, 돈 관리, 드라이버 등\n각자의 역할을 정해보세요</string>
    <string name="our_role">우리의 역할</string>
    <string name="our_checklist">우리의 체크리스트</string>
    <string name="chk_first">여행 전에 미리 체크하세요!</string>
    <string name="chk_first_detail">이번 여행에서 꼭 확인해야\n하는 것들을 미리 공유해요</string>
    <string name="example_take_picture">Ex. 인생사진 찍어오기!</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="log_out">로그아웃</string>
    <string name="frequent_question">자주 묻는 질문</string>
    <string name="ask_question">문의하기</string>
    <string name="set_alarm">알림 설정</string>
    <string name="set_profile">프로필 설정</string>
    <string name="_0">0</string>
    <string name="my_trip_tendency_result">내 여행성향 결과</string>
    <string name="my_travel">내 여행</string>
    <string name="next">다음</string>
</resources>