<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_travel_friends_root"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:background="@drawable/bg_white_pure9_round_layout"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:includeFontPadding="false"
            android:text="여행 목표"
            android:textColor="@color/gray_black_1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="이번 여행의 목표를 함께 공유하세요!"
            app:layout_constraintStart_toStartOf="@id/tv_category"
            app:layout_constraintTop_toBottomOf="@id/tv_category" />

        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_icon_board_goal_active"
            app:layout_constraintBottom_toBottomOf="@id/tv_category_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_category" />

        <EditText
            android:id="@+id/et_add_content"
            android:layout_width="0dp"
            android:layout_height="86dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_add_edit_text"
            android:gravity="top"
            android:hint="@string/example_take_picture"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/iv_category"
            app:layout_constraintStart_toStartOf="@id/tv_category"
            app:layout_constraintTop_toBottomOf="@id/tv_category_detail" />

        <Button
            android:id="@+id/bt_cancel"
            style="@style/RoundButton.DooRiBonGray7"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_gray_black_4"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_ok"
            app:layout_constraintStart_toStartOf="@id/tv_category"
            app:layout_constraintTop_toBottomOf="@id/et_add_content" />

        <Button
            android:id="@+id/bt_ok"
            style="@style/RoundButton.DooRiBonOrange"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:text="@string/ok"
            android:textColor="@color/gray_white_pure_9"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/bt_cancel"
            app:layout_constraintEnd_toEndOf="@id/iv_category"
            app:layout_constraintStart_toEndOf="@id/bt_cancel"
            app:layout_constraintTop_toTopOf="@id/bt_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>